# graphchat

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
backend/: Dockerfile  main.py  requirements-dev.txt  requirements.txt
backend/api/endpoints/: messages.py  nodes.py  recommendations.py  sessions.py  vector_search.py  websocket.py
backend/app/: config.py  main.py
backend/core/: config.py  container.py  dependencies.py
backend/db/: falkordb.py
backend/schemas/: __init__.py  ai_models.py  branch_recommendation.py  message.py  node.py  service_responses.py  session.py  vector_search.py  websocket.py
backend/services/: __init__.py  branch_recommendation_service.py  branching_service.py  chat_service.py  gemini_service.py  message_service.py  node_service.py  node_service_summary.py  openrouter_service.py  session_service.py  vector_embedding_service.py  vector_search_service.py
backend/tests/: conftest.py  test_main.py
backend/utils/: logger.py
docs/: architecture.md  backend-architecture.md  backend-setup.md  prd.md  refactoring-summary.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: README.md  check_falkordb.py  run_backend.py  run_tests.sh  test_app.py  test_llm_branching.py
tests/: conftest.py  test_falkordb.py
tests/integration/: conftest.py  test_api_int.py  test_websocket_int.py
tests/unit/: test_config.py  test_services.py
(+93 files in other folders)
